--- a/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/classify.html
+++ b/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/classify.html
@@ -4,38 +4,115 @@
 <meta charset="UTF-8">
 <title>Classify 商品分類</title>
 <th:block th:include="./include/header:: header"></th:block>
+<script>
+	$(document).ready(function() {
+		$("#add").on("click", function() {
+			var jsonObj = $("#myform").serializeObject(); //得到json物件
+			var jsonStr = JSON.stringify(jsonObj);
+			console.log(jsonStr);
+			$.ajax({
+				url : "/portfolio2/classify/add",
+				type : "POST",
+				contentType : "application/json;charset=utf-8",
+				data : jsonStr,
+				cache : false,
+				processData : false,
+				success : function(resp) {
+					console.log(JSON.stringify(resp));
+				}
+			});
+		});
+        
+		$("#	").on("click","tr",function(){
+        	var id = $(this).find("td").eq(0).text().trim();
+        	console.log(id);
+        	var url = "/portfolio2/classify/"+id;
+        	$.get(url , function(data , status){
+        		console.log(JSON.stringify(data));
+        	    $("#myform").find("#id").val(data.id);
+        	    $("#myform").find("#name").val(data.name);
+        	    $("#myform").find("#tx").prop('check',data.tx);	
+        	});
+        });
+		
+		
+		inutPageSetup();
+	});
+
+	function inutPageSetup() {
+		table_list();
+	}
+
+	//列表資料
+	function table_list() {
+		$.get("/portfolio2/classify/", function(datas, status) {
+			console.log(datas);
+			console.log(status);
+			//清除 tbody內容
+			$("#myTable tbody >tr").remove();
+			//加入資料
+			$.each(datas, function(i, item) {
+				var html = "<tr><td>{0}</td><td>{1}</td><td>{2}</td></tr>"
+				$("#myTable").append(
+						String.format(html, item.id, item.name, item.tx));
+			});
+		});
+
+	}
+</script>
 </head>
 <body>
-    <th:block th:include="./include/navbar:: navbar"></th:block>
-    
-    <div class="container">
-         <h1>Classify商品分類</h1>
-         <form id ="myform" class="form-horizontal">
-         <div class="form-group">
-            <label class="col-sm-2 control-label">ID</label>
-            <div class="col-sm-5">
-                <input  id="id" name="id" type="number" value="0" readonly="readonly"
-                class="form-control" />
-            </div>            
-         </div>
-         <div class="form-group">
-            <label class="col-sm-2 control-label">分類名稱</label>
-            <div class="col-sm-10">
-                <input  id="name" name="name" placeholder="輸入分類名稱"
-                 class="form-control" />
-            </div>
-         </div>
-         <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <div class="check">
-                    <label>
-                        <input id="tx" name="tx" type="checkbox" /> 支援交易(TX)
-                    </label>
-                </div>
-            </div>
-         </div>
-         </form>
-    </div>
-    <th:block th:include="./include/footer:: footer"></th:block>
+	<th:block th:include="./include/navbar:: navbar"></th:block>
+	<div class="container">
+		<h1>Classify商品分類</h1>
+		<form id="myform" class="form-horizontal">
+			<div class="form-group">
+				<label class="col-sm-2 control-label">ID</label>
+				<div class="col-sm-5">
+					<input id="id" name="id" type="number" value="0"
+						readonly="readonly" class="form-control" />
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-sm-2 control-label">分類名稱</label>
+				<div class="col-sm-10">
+					<input id="name" name="name" value="" placeholder="輸入分類名稱"
+						class="form-control" />
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<div class="check">
+						<label> <input id="tx" name="tx" type="checkbox" />
+							支援交易(TX)
+						</label>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+					<button id="add" type="button" class="btn btn-success">新增</button>
+					<button id="upt" type="button" class="btn btn-info">修改</button>
+					<button id="del" type="button" class="btn btn-danger">刪除</button>
+					<button id="res" type="button" class="btn btn-warning">重製</button>
+				</div>
+			</div>
+		</form>
+		<h1>Classify商品分類列表</h1>
+		<table id="myTable" border="1"
+			class="table table-striped table-responsive-md">
+			<thead>
+				<tr>
+					<th>id</th>
+					<th>name</th>
+					<th>tx</th>
+				</tr>
+			</thead>
+			<tbody>
+
+			</tbody>
+		</table>
+	</div>
+	<th:block th:include="./include/footer:: footer"></th:block>
 </body>
 </html>
