--- a/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/classify.html
+++ b/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/classify.html
@@ -22,8 +22,25 @@
 				}
 			});
 		});
+		
+		$("#upt").on("click", function() {
+			var jsonObj = $("#myform").serializeObject(); //得到json物件
+			var jsonStr = JSON.stringify(jsonObj);
+			console.log(jsonStr);
+			$.ajax({
+				url : "/portfolio2/classify/add",
+				type : "GET",
+				contentType : "application/json;charset=utf-8",
+				data : jsonStr,
+				cache : false,
+				processData : false,
+				success : function(resp) {
+					console.log(JSON.stringify(resp));
+				}
+			});
+		});
         
-		$("#	").on("click","tr",function(){
+		$("#myTable").on("click","tr",function(){
         	var id = $(this).find("td").eq(0).text().trim();
         	console.log(id);
         	var url = "/portfolio2/classify/"+id;
