--- a/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/classify.html
+++ b/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/classify.html
@@ -19,44 +19,69 @@
 				processData : false,
 				success : function(resp) {
 					console.log(JSON.stringify(resp));
+					initPageSetup();
 				}
 			});
 		});
-		
+
 		$("#upt").on("click", function() {
 			var jsonObj = $("#myform").serializeObject(); //得到json物件
 			var jsonStr = JSON.stringify(jsonObj);
 			console.log(jsonStr);
 			$.ajax({
-				url : "/portfolio2/classify/add",
-				type : "GET",
+				url : "/portfolio2/classify/" + jsonObj.id,
+				type : "PUT",
 				contentType : "application/json;charset=utf-8",
 				data : jsonStr,
 				cache : false,
 				processData : false,
 				success : function(resp) {
 					console.log(JSON.stringify(resp));
+					initPageSetup();
+				}
+			});
+
+		});
+
+		$("#del").on("click", function() {
+			var id = $("#myform").find("#id").val();
+			$.ajax({
+				url : "/portfolio2/classify/" + id,
+				type : "DELETE",
+				success : function(resp) {
+					console.log(JSON.stringify(resp));
+					initPageSetup();
 				}
 			});
 		});
-        
-		$("#myTable").on("click","tr",function(){
-        	var id = $(this).find("td").eq(0).text().trim();
-        	console.log(id);
-        	var url = "/portfolio2/classify/"+id;
-        	$.get(url , function(data , status){
-        		console.log(JSON.stringify(data));
-        	    $("#myform").find("#id").val(data.id);
-        	    $("#myform").find("#name").val(data.name);
-        	    $("#myform").find("#tx").prop('check',data.tx);	
-        	});
-        });
 		
+		$("#myTable").on("click", "tr", function() {
+			var id = $(this).find("td").eq(0).text().trim();
+			console.log(id);
+			var url = "/portfolio2/classify/" + id;
+			$.get(url, function(data, status) {
+				console.log(JSON.stringify(data));
+				$("#add").attr("disabled", true);
+				$("#upt").attr("disabled", false);
+				$("#del").attr("disabled", false);
+				$("#myform").trigger("reset");
+				$("#myform").find("#id").val(data.id);
+				$("#myform").find("#name").val(data.name);
+				$("#myform").find("#tx").prop('checked', data.tx);
+			});
+		});
 		
-		inutPageSetup();
+		$("#rst").on("click", function() {
+			initPageSetup();
+		});
+       initPageSetup();
 	});
 
-	function inutPageSetup() {
+	function initPageSetup() {
+		$("#add").attr("disabled", false);
+		$("#upt").attr("disabled", true);
+		$("#del").attr("disabled", true);
+		$("#myform").trigger("reset");
 		table_list();
 	}
 
@@ -111,7 +136,7 @@
 					<button id="add" type="button" class="btn btn-success">新增</button>
 					<button id="upt" type="button" class="btn btn-info">修改</button>
 					<button id="del" type="button" class="btn btn-danger">刪除</button>
-					<button id="res" type="button" class="btn btn-warning">重製</button>
+					<button id="rst" type="button" class="btn btn-warning">重製</button>
 				</div>
 			</div>
 		</form>
