--- a/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/include/navbar.html
+++ b/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/include/navbar.html
@@ -11,7 +11,7 @@
 						class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#">
-					
+					Hi <span th:text="${#session.getAttribute('investor_username')}"></span>
 				</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
