--- a/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/tstock.html
+++ b/SpringBoot-Portfolio-20211121-home/src/main/resources/templates/tstock.html
@@ -118,7 +118,7 @@
 	<th:block th:include="./include/navbar :: navbar"></th:block>
 	<div class="container">
 		<p />
-		<h1>TStock 股票、指數、匯率</h1>
+		<h1>TStock 股票、指數、匯率 備註:刪除產品前watch中的都要刪除</h1>
 		<form id="myform" class="form-horizontal">
 
 			<div class="form-group">
